--- a/index03.html
+++ b/index03.html
@@ -448,8 +448,58 @@ function currentRowMinutes(idx){
   return minutesFromRowTime(csvData[idx]);
 }
 
+/* =====================================================
+   🔁 Synchronisation automatique des fichiers Z3
+   - Vérifie que le cache est chargé depuis index.html
+   - Recharge si besoin à partir du dossier "Historique"
+   ===================================================== */
+async function ensureZ3FilesLoaded() {
+  const cached = JSON.parse(localStorage.getItem("csvZ3Files") || "[]");
+  if (cached.length) {
+    console.log(`📦 ${cached.length} fichiers Z3 déjà présents dans le cache`);
+    return cached;
+  }
+
+  console.warn("⚠️ Aucun Z3 préchargé trouvé, tentative de rechargement…");
+
+  try {
+    const list = JSON.parse(localStorage.getItem("csvFilesList") || "[]");
+    const first = list.find(
+      f => f.name &&
+      (f.name.toLowerCase().includes("traça_temp") || f.name.toLowerCase().includes("traca_temp"))
+    );
+    if (!first) throw new Error("Pas de dossier Traça_Temp détecté");
+
+    const parentFolder = first.folder.split('/').slice(0, -1).join('/');
+    const historiqueFolder = `${parentFolder}/Historique`;
+
+    const res = await fetch(`/api/list?path=${encodeURIComponent(historiqueFolder)}`);
+    if (!res.ok) throw new Error("Erreur de lecture API");
+    const files = await res.json();
+
+    const z3Files = files
+      .filter(f => f.name.startsWith("Z3") && f.name.endsWith(".csv"))
+      .map(f => ({
+        name: f.name,
+        path: `${historiqueFolder}/${f.name}`,
+        folder: historiqueFolder
+      }));
+
+    localStorage.setItem("csvZ3Files", JSON.stringify(z3Files));
+    console.log(`✅ ${z3Files.length} fichiers Z3 rechargés depuis "${historiqueFolder}"`);
+    return z3Files;
+  } catch (err) {
+    console.error("❌ Impossible de recharger les fichiers Z3 :", err);
+    return [];
+  }
+}
+
+  
 // =====================================================
-// ✅ Version stable (identique viewer02) — plus aucun souci d’accents
+// ✅ Version identique à viewer02 — complète et robuste
+// =====================================================
+// =====================================================
+// ✅ Version identique à viewer02 — complète et robuste
 // =====================================================
 async function loadZ3ForSameDay() {
   z3Events = [];
@@ -462,17 +512,39 @@ async function loadZ3ForSameDay() {
     return;
   }
 
-  const z3Files = JSON.parse(localStorage.getItem("csvZ3Files") || "[]");
+  // 🔹 Récupération ou rechargement des fichiers Z3
+  const z3Files = await ensureZ3FilesLoaded();
   const sameDay = z3Files.filter(f => f.name.includes(day));
-
   console.log(`🔍 Recherche Z3 du ${day} → ${sameDay.length} fichier(s) trouvé(s)`);
 
   for (const f of sameDay) {
-    let text = f.content; // ⚠️ NE PAS re-décoder ici
+    let text = f.content;
+
+    // 🔸 Si pas de contenu, téléchargement via proxy Drive (identique viewer02)
+    if (!text && f.id) {
+      try {
+        console.log("🌐 Téléchargement Z3 depuis Drive :", f.name);
+        const url = `https://smes21540.netlify.app/.netlify/functions/drive?id=${f.id}&name=${encodeURIComponent(f.name || "")}`;
+        const res = await fetch(url);
+        if (!res.ok) throw new Error("Erreur proxy Drive");
+        const buf = await res.arrayBuffer();
+        text = decodeSmart(buf); // même décodage que CSV principal
+
+        f.content = text;
+        const all = JSON.parse(localStorage.getItem("csvZ3Files") || "[]");
+        const updated = all.map(x => x.name === f.name ? f : x);
+        localStorage.setItem("csvZ3Files", JSON.stringify(updated));
+      } catch (err) {
+        console.error("❌ Erreur chargement fichier Z3 :", f.name, err);
+        continue;
+      }
+    }
+
+    if (!text) continue;
 
     // 🧹 Nettoyage et parsing CSV
     const lines = text.split(/\r?\n/).filter(l => l.trim() !== "");
-    let startIndex = lines.findIndex(l => /trigger.?time/i.test(l));
+    let startIndex = lines.findIndex(l => /trigger.?time|horodatage/i.test(l));
     if (startIndex === -1) startIndex = 0;
     const csvClean = lines.slice(startIndex).join("\n");
 
@@ -486,9 +558,12 @@ async function loadZ3ForSameDay() {
     const H = parsed.meta.fields || [];
     const rows = parsed.data || [];
 
-    const timeCol = H.find(h => /trigger.?time|heure/i.test(h)) || H[1];
-    const msgCol  = H.find(h => /message/i.test(h)) || H[2];
-    const addrCol = H.find(h => /address ?1/i.test(h));
+    // 🔍 Détection des colonnes (FR / EN / variantes)
+    const timeCol = H.find(h => /(trigger.?time|heure|horodatage|time|temps)/i.test(h)) || H[0];
+    const msgCol  = H.find(h => /(message|desc|description|evenement|event)/i.test(h)) || H[1];
+    const addrCol = H.find(h => /(address|adresse|addr|zone|address ?1)/i.test(h)) || null;
+
+    console.log("🧩 Colonnes Z3 détectées :", { timeCol, msgCol, addrCol });
 
     for (const r of rows) {
       const t = String(r[timeCol] || "").trim();
@@ -511,6 +586,8 @@ async function loadZ3ForSameDay() {
   renderZ3List();
   highlightZ3Near(currentRowMinutes(0));
 }
+
+
 
 
 
@@ -925,16 +1002,22 @@ document.getElementById("maxInput").addEventListener("change", ()=>{
 
 
 /* =================== INIT =================== */
-document.addEventListener("DOMContentLoaded", () => {
+document.addEventListener("DOMContentLoaded", async () => {
   setTheme(localStorage.getItem("selectedTheme") || "orange");
+  await ensureZ3FilesLoaded(); // 🧩 s'assure que les Z3 sont disponibles
   loadPlan();
   requestAnimationFrame(updateTileSize);
   loadCSV();
   window.addEventListener("load", updateTileSize);
 });
+
 </script>
 </body>
 </html>
+
+
+
+
 
 
 
